Fix scrollbar on firefox

--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -1,9 +1,12 @@
+html {
+    overflow-y: scroll;
+}
+
 html, body {
     scroll-behavior: smooth;
 }
 
 body {
-    overflow-y: scroll;
     background-size: 100%;
     background: #1b2738 no-repeat center top;
 }
